# gnome-media

./: .cvsignore  AUTHORS  BUGS  ChangeLog  ChangeLog.pre-2-26  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.extace  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  gnome-media.doap  gnome-media.spec  gnome-media.spec.in  gstreamer-0.10.patch  transmogrify-into-gstreamer-0.10
cddb-slave2/: .cvsignore  CDDB-Slave2.schemas  CDDB-Slave2.schemas.in  ChangeLog  GNOME_Media_CDDBSlave2.idl  GNOME_Media_CDDBSlave2.server.in.in  HACKING  Makefile.am  README.GNET  cddb-disclosure.c  cddb-parser.c  cddb-slave-capplet.c  cddb-slave-client.c  cddb-slave-client.h  cddb-slave.c  cddb-slave.desktop.in  cddb-slave.desktop.in.in  cddb-slave.h  cddb-slave2-properties  cddb-slave2-query.c  cddb-track-editor.c  gnet-private.c  gnet-private.h  inetaddr.c  inetaddr.h  main.c  socks-private.c  socks-private.h  socks.c  tcp.c
extace/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  extace.c  extace.desktop  logo.xpm  sine.c  stars.c
gmix/: .cvsignore  BUGS  CHANGES  ChangeLog  Makefile.am  NEWS  README  TODO  gmix.c  gmix.desktop  gmix.desktop.in  gmix.h  gnome-fader.c  gnome-mixer.c  gnome-mixer.h  gnome-volume-control.desktop.in  gnome-volume-control.desktop.in.in  prefs.c  prefs.h
gnome-cd/: .cvsignore  ChangeLog  ChangeLog.pre-2-26  HACKING  Makefile.am  bsd-cdrom.c  bsd-cdrom.h  callbacks.c  callbacks.h  cddb.c  cddb.h  cdrom.c  cdrom.h  display.c  display.h  freebsd-cdrom.c  gnome-cd-type.h  gnome-cd.c  gnome-cd.desktop.in  gnome-cd.desktop.in.in  gnome-cd.h  gnome-cd.schemas  gnome-cd.schemas.in  gnome-cd.schemas.in.in  gst-cdparanoia-cdrom.c  gst-cdparanoia-cdrom.h  gst-cdrom.c  gst-cdrom.h  linux-cdrom.c  linux-cdrom.h  preferences.c  preferences.h  solaris-cdrom.c  solaris-cdrom.h  theme.c
gnome-cd/access/: Makefile.am  cddisplayaccessible.c  cddisplayaccessiblefactory.c  cddisplayaccessiblefactory.h  factory.c  factory.h  pangoaccessible.c  pangoaccessible.h  pangoaccessiblefactory.c
gnome-cd/doc/: ChangeLog  Makefile.am
gnome-cd/images/: Makefile.am  Theme-Limitations
gnome-volume-control/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  alsa-channel.c  alsa-channel.h  alsa-device.c  alsa-mixer.c  alsa-mixer.h  device-module.h  gnome-channel-group.c  gnome-channel-group.h  gnome-channel-widget.c  gnome-channel-widget.h  gnome-channel.c  gnome-channel.h  gnome-mixer.c  gnome-mixer.h  gnome-volume-control.c  gnome-volume-control.desktop.in  oss-channel.c  oss-channel.h  oss-device.c  oss-mixer.c  oss-mixer.h  volume-marshal.list
gnome-volume-control/data/: Makefile.am  gnome-volume-control-applet.desktop.in  gnome-volume-control.desktop.in.in
gnome-volume-control/src/: Makefile.am  applet-main.c  cc-sound-panel.c  dialog-main.c  gvc-applet.c  gvc-balance-bar.c  gvc-balance-bar.h  gvc-channel-bar.c  gvc-channel-bar.h  gvc-channel-map.c  gvc-channel-map.h  gvc-combo-box.c  gvc-combo-box.h  gvc-level-bar.c  gvc-log.c  gvc-mixer-card.c  gvc-mixer-card.h  gvc-mixer-control.c  gvc-mixer-control.h  gvc-mixer-dialog.c  gvc-mixer-dialog.h  gvc-mixer-event-role.c  gvc-mixer-sink-input.c  gvc-mixer-sink-input.h  gvc-mixer-sink.c  gvc-mixer-sink.h  gvc-mixer-source-output.c  gvc-mixer-source-output.h  gvc-mixer-source.c  gvc-mixer-source.h  gvc-mixer-stream.c  gvc-mixer-stream.h  gvc-sound-theme-chooser.c  gvc-sound-theme-editor.c  gvc-speaker-test.c  gvc-stream-status-icon.c  rb-segmented-bar.c  rb-segmented-bar.h  sound-theme-file-utils.c  sound-theme-file-utils.h
gnomovision/: .cvsignore  ChangeLog  Makefile.am  README.tvset  about.xpm  audio.xpm  capturer.xpm  channels.c  channels.h  dummy.xpm  gnomovision.desktop  gnomovision.h  gtktv.c  gtktv.h  gtv.c  gtv.h  picture.xpm  preferences.c  quit.xpm  tgtv.c  tmp.xpm  tv-videodev.c  tvset.c  xwindows.c
grecord/: .cvsignore  ChangeLog  Makefile.am  README  Soundrecorder.desktop  Soundrecorder.desktop.in  gnome-sound-recorder.desktop.in  gnome-sound-recorder.desktop.in.in  gnome-sound-recorder.schemas  gnome-sound-recorder.schemas.in  gnome-sound-recorder.schemas.in.in  gsr.xml
grecord/doc/: ChangeLog  Makefile.am
grecord/help/: Makefile.am
grecord/icons/: Makefile.am
grecord/src/: .cvsignore  Makefile.am  Makefile.in  gnome-recorder.c  gnome-recorder.h  grec.c  grec.h  gsr-window.c  gsr-window.h  gui.c  gui.h  main.c  preferences.c  preferences.h  prog.h  sound.c  sound.h  ui.xml
gst-mixer/: .cvsignore  Makefile.am  gnome-volume-control-ui.xml  gnome-volume-control.desktop.in  gnome-volume-control.desktop.in.in  gnome-volume-control.schemas.in
gst-mixer/doc/: ChangeLog  Makefile.am
gst-mixer/help/: Makefile.am
gst-mixer/icons/: Makefile.am
gst-mixer/pixmaps/: Makefile.am
gst-mixer/src/: .cvsignore  Makefile.am  button.c  button.h  element.c  element.h  keys.h  main.c  misc.c  misc.h  mixer.c  preferences.c  preferences.h  stock.h  track.c  track.h  volume.c  volume.h  window.c  window.h
sound-theme/: Makefile.am  gvc-sound-theme-chooser.c  gvc-sound-theme-editor.c  gvc-sound-theme-editor.h  sound-theme-file-utils.c
sound-theme/sounds/: Makefile.am
tcd/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  Thanks  acconfig.h  aclocal.m4  autogen.sh  callbacks.c  callbacks.h  cddb.c  cddb.h  cddb_props.c  cddb_props.h  cddb_status.c  cdrom.c  configure  configure.in  gabout.c  gabout.h  gcddb.c  gcddb.h  gtcd  gtcd.c  gtcd.desktop  gtcd_public.h  gtracked.c  gtracked.h  keybindings.c  keybindings.h  led.c  linux-cdrom.c  linux-cdrom.h  popup.c  (+13 more)
tcd/config/: InSight.gtcdrc  README  dark.background.xpm  dark.gtcdrc  dark.mytile.xpm
tcd/corba/: Makefile  cdaudio-client.c  cdaudio-impl.c  cdaudio-server.c  cdaudio.gnorba  cdaudio.idl
tcd/icons/: Makefile.am  README  cdrom.xpm  data.xpm  edit.xpm  goto.xpm  makeset  menu.xpm  music.xpm  power.xpm  (+4 more)
vu-meter/: .cvsignore  ChangeLog  Makefile.am  gtkled.c  gtkledbar.c  gtkledbar.h  main.c  reclevel.desktop.in  reclevel.desktop.in.in  vumeter.desktop  vumeter.desktop.in  vumeter.desktop.in.in
(+427 files in other folders)
